Add Style and SubModel classes

--- a/EdmundsApi/EdmundsApi.csproj
+++ b/EdmundsApi/EdmundsApi.csproj
@@ -141,6 +141,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Edmunds.cs" />
+    <Compile Include="Models\Style.cs" />
+    <Compile Include="Models\SubModel.cs" />
+    <Compile Include="Models\test.cs" />
     <Compile Include="NamedFormatter.cs" />
     <Compile Include="Models\Make.cs" />
     <Compile Include="Models\Model.cs" />
